syntax = "proto3";

package stats.service.collector;

option java_package = "ru.yandex.practicum.grpc.stats.action";
option java_multiple_files = true;

import "google/protobuf/empty.proto";
import "stats/messages/collector/user_action.proto";

service UserActionController {
    rpc CollectUserAction (stats.messages.collector.UserActionProto)
            returns (google.protobuf.Empty);


}